--- a/README.Rmd
+++ b/README.Rmd
@@ -34,6 +34,10 @@ devtools::install_github("jsta/dams")
 
 ## Usage
 
+```{r eval=FALSE}
+dams_sample <- extract_nid()
+```
+
 ## References
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
