--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(
 
 [![rstudio mirror downloads](http://cranlogs.r-pkg.org/badges/dams?color=C9A115)](https://github.com/metacran/cranlogs.app)
 [![cran version](http://www.r-pkg.org/badges/version/dams)](https://cran.r-project.org/package=dams)
+[![Travis build status](https://travis-ci.org/jsta/dams.svg?branch=master)](https://travis-ci.org/jsta/dams)
 
 `dams` is an R data package interface to the United States National Inventory of Dams (NID) <http://nid.usace.army.mil>
 
