--- a/README.Rmd
+++ b/README.Rmd
@@ -37,8 +37,12 @@ devtools::install_github("jsta/dams")
 
 ```{r eval=FALSE}
 library(dams)
-data(nid_cleaned)
+data(nid_subset)
 ```
+
+## Metadata
+
+See metadata [field descriptions](https://jsta.github.io/dams/reference/nid_all.html).
 
 ## References
 
