--- a/vignettes/dams.Rmd
+++ b/vignettes/dams.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Dams Package Demo"
-author: "Gopi Goteti and Joseph Stachelek"
+author: "Gopi Goteti and Jemma Stachelek"
 date: "`r Sys.Date()`"
 fig_caption: true
 output: rmarkdown::html_vignette
