note latest data

--- a/README.Rmd
+++ b/README.Rmd
@@ -35,6 +35,8 @@ devtools::install_github("jsta/dams")
 
 ## Usage
 
+The latest data included in the package goes up to **2019**.
+
 ```{r eval=FALSE}
 library(dams)
 data(nid_subset)
